[gd_scene load_steps=6 format=3 uid="uid://b6djxxw1feinw"]

[ext_resource type="Script" path="res://scripts/overworld_camera.gd" id="1_c4rh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36b3j"]
size = Vector2(72, 960)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6qha"]
size = Vector2(67, 960)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ycot"]
size = Vector2(1440, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83asq"]
size = Vector2(1440, 66)

[node name="OverworldCamera" type="Camera2D"]
position = Vector2(560, 320)
script = ExtResource("1_c4rh6")

[node name="LeftBoundary" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBoundary"]
position = Vector2(-760, 0)
shape = SubResource("RectangleShape2D_36b3j")

[node name="RightBoundary" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBoundary"]
position = Vector2(760, 0)
shape = SubResource("RectangleShape2D_l6qha")

[node name="UpBoundary" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpBoundary"]
position = Vector2(0, -520)
shape = SubResource("RectangleShape2D_3ycot")

[node name="DownBoundary" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownBoundary"]
position = Vector2(0, 520)
shape = SubResource("RectangleShape2D_83asq")

[connection signal="body_entered" from="LeftBoundary" to="." method="_on_left_boundary_body_entered"]
[connection signal="body_entered" from="RightBoundary" to="." method="_on_right_boundary_body_entered"]
[connection signal="body_entered" from="UpBoundary" to="." method="_on_up_boundary_body_entered"]
[connection signal="body_entered" from="DownBoundary" to="." method="_on_down_boundary_body_entered"]
